# School21-Ecole42

./: README.md
CPP_piscine/: README.md
bsqq/: Makefile  auteur  bsq.h  second_bsq.c
cub3d/: Makefile  README.md  map_1.cub  map_2_b.cub  map_3.cub  map_4.cub
ft_containers/: README.md
ft_printf/: Makefile  README.md  a.out  ft_parser.c  ft_print_c.c  ft_print_d_i.c  ft_print_p.c  ft_print_s.c  ft_print_u.c  ft_print_x.c  ft_printf.c  ft_printf.h  ft_subfunc_cnt.c  ft_subfunc_put.c  main.c  readme
ft_server/: Dockerfile  README.md
ft_services/: README.md  setup.sh
libasm/: main.c  (+8 more)
minishell/: CMakeLists.txt  Makefile  README.md  main.c
minishell/gnl/: get_next_line.c
minishell/includes/: libft.h  minishell.h
minishell/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+8 more)
minishell/parser/: errors.c  get_dollar.c  get_escaping.c  get_quotes.c  get_redirect.c  get_redirect_addtl.c  get_smc_and_pps.c  parser.c  parser_data_init.c  parser_utils.c  save_list.c
minishell/worker/: builtins.c  builtins_utils.c  env.c  env_utils.c  redirect.c  run.c  utils.c
(+457 files in other folders)
